adjust jvm men